# neoclassical.ai

./: .gitignore  AGENTS.md  LICENSE  ManimPythonPrompts.md  NPQG.py  README-aider.md  README-ask.md  README-examples.md  README-git.md  README-iterm2.md  README-manim_library.md  README-prompts.md  README-venv.md  README-vscode.md  README.md  README_aider.md  README_convert_manim.md  README_examples.md  README_git.md  README_godot.md  README_godot_guidelines.md  README_iterm2.md  README_libary.md  README_manim_library.md  README_prompts.md  README_venv.md  doaider.sh  edit-format-idea.md  git_synchronization.md  insights.md  main.gd  manim.cfg  mysettings.sh  neoclassical.py  new.md  notes.md  pyproject.toml  run-aider.sh  run-example.sh  run-mysettings.sh  (+8 more)
Ai-assembly-language/: ideas.md
depot/: README-depot.md  README_depot.md  run-mysettings.sh
docs/: app.js  index.html  print_scene_tree.sh  style.css
entourage/: atomic-nuclear-condensed-matter.md  computational-physics-simulation.md  experimentalist-observational-strategy.md  foundations-philosophy-physics.md  general-relativist-cosmologist.md  goals-objectives-system-prompt.md  std-model-qft-phenomenologist.md  topologist-dynamical-systems-theorist.md
examples/: Angle.py  AngleClassUse.py  AngleNew.py  AnglePath.gd  AnglePath.py  AnglesMoving.py  AnimatedAngle.py  ArrowTips.py  CircleSizes.py  Clock.py  Dot3DGrid.py  DotGrid.py  LatexPlus.py  LineOpacity.py  Lorenz3D.py  MakeGraph.py  Morph.py  MovingAngle.py  MovingFrameBox.py  MultipleAnimations.py  PathTrace.py  PointMovingOnShapes.py  PolarCoordinates.py  (+13 more)
(+1403 files in other folders)
